[package]
name = "holochain-app-ws-tester"
description = "Verify a holochain conductor is running and has a reachable app websocket at a given URL"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
holochain_client = "=0.4.2"
tokio = "1.32.0"